<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2F4859">

    <item
        android:icon="@drawable/cart"
        android:id="@+id/cart"
        android:title="@string/cart"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/Upload"
        android:title="@string/upload"
        app:showAsAction="never" />

    <item
        android:id="@+id/clothes"
        android:title="@string/clothes"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/men"
                android:title="@string/men"
                app:showAsAction="never"/>

            <item
                android:id="@+id/women"
                android:title="@string/women"
                app:showAsAction="never"/>

            <item
                android:id="@+id/kids"
                android:title="@string/kids"
                app:showAsAction="never">

                <menu>

                    <item
                        android:id="@+id/boys"
                        android:title="@string/boys"
                        app:showAsAction="never"/>

                    <item
                        android:id="@+id/girls"
                        android:title="@string/girls"
                        app:showAsAction="never"/>

                </menu>

            </item>


        </menu>

    </item>

    <item
        android:id="@+id/signoutdrawar"
        android:title="@string/signout"
        app:showAsAction="never" />

</menu>