<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/image_view"/>

    <TextView
        android:padding="5dp"
        android:id="@+id/product_name"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="12sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:text="@string/product_name"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/product_price"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>